# nonebot-plugin-qqdetail

./: .env.example  pyproject.toml
nonebot_plugin_qqdetail/: __init__.py
